# smart_cpa_bot

./: .env  .env.example  .gitignore  README.md  api_docs.html  pyproject.toml  requirements_doc.txt
src/smart_cpa_bot/: __init__.py  config.py  db.py
src/smart_cpa_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/smart_cpa_bot/api/: server.py
src/smart_cpa_bot/models/: __init__.py  base.py  engagement.py  finance.py  offer.py  user.py
src/smart_cpa_bot/scripts/: run_api.py  run_offers_bot.py  run_primary_bot.py
src/smart_cpa_bot/services/: balances.py  clicks.py  conversation.py  conversions.py  feedback.py  leaderboard.py  llm.py  offers.py  payouts.py  rate_limit.py  recommendations.py  saleads.py  users.py
src/smart_cpa_bot/telegram/: middlewares.py
src/smart_cpa_bot/telegram/routers/: __init__.py  offers.py  primary.py
tests/: test_conversation.py
